--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<img class="fake" src="/Users/ahmedjamal/Downloads/demo.png" />
+<img class="fake" src="demo.png" />
 
 </body>
 </html>
